[package]
name = "isis-eps-service-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isis-eps-api-v2 = { git = "ssh://git@github.com/Oscar-Ansted/isis-eps-api-v2 }
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service.git"}
cubeos-error = { git = "ssh://git@github.com/Cube-OS/cubeos-error.git"}
juniper = "0.14.2"
serde = "1.0"
serial = "0.4.0"
failure = "0.1.3"
log = "0.4.8"
circular-queue = "0.2.6"
