[package]
name = "isis-eps-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isis-eps-api = { git = "ssh://git@github.com/Cube-OS/isis-eps-api.git" }
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service.git"}
cubeos-error = { git = "ssh://git@github.com/Cube-OS/cubeos-error.git", brach = "ae481b876fd3e30ecba7d0a684e8655f1fe3216a"}
juniper = "0.14.2"
serde = "1.0"
serial = "0.4.0"
failure = "0.1.3"
log = "0.4.8"
circular-queue = "0.2.6"

[features]
default = ['cubeos-service/default']
# graphql = ['cubeos-service/graphql']
ground = ['cubeos-service/ground']
debug = ['cubeos-service/debug']